# WebServer

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: connection_manager.h  connection_manager.hpp  http.hpp  http_method.h  http_request.h  http_types.hpp  path_forward.h  path_forwarder.h  path_forwarder.hpp  request.h  request_generator.h  request_handler.h  request_handler.hpp  request_parser.h  server.h  server.hpp  socket.h  socket.hpp
src/: connection_manager.cpp  http.cpp  http_request.cpp  main.cpp  path_forward.cpp  path_forwarder.cpp  request.cpp  request_generator.cpp  request_handler.cpp  request_parser.cpp  server.cpp  socket.cpp
static/: main.html
